code clean-up